[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musiccoca"
version = "0.0.1"
authors = [
  { name="Google DeepMind" },
]
description = "MusicCoCa: Joint text-audio embeddings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "absl-py",
  "clu",
  "librosa",
  "numpy",
  "resampy",
  "requests",
  "sentencepiece",
  "soundfile",
  "tensorflow==2.19.0",
  "tqdm",
  "typing-extensions",
]

[project.optional-dependencies]
test = [
  "pytest",
]
gpu = [
  "jax[cuda12]",
  "t5x[gpu]",
]
tpu = [
  "jax[tpu]==0.8.1",
  "t5x[tpu] @ git+https://github.com/google-research/t5x.git",
]

[project.urls]
Homepage = "https://github.com/magenta/magenta-realtime"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"magenta_rt" = [
  "depthformer/configs/*.gin",
  "colab/static/js/*.js",
  "colab/static/html/*.html",
  ]
